[package]
name = "hot-reload"
version = "0.1.0"
edition = "2021"
rust-version = "1.87"
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = []
voxelis = ["dep:glam_029", "dep:voxelis"]

[dependencies]
glam_029 = { workspace = true, optional = true }
godot = { path = "../../../godot", default-features = false }
voxelis = { workspace = true, optional = true }
